# mwe_conda_matio_static_link

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md
Hello_lib/: CMakeLists.txt  Speaker.cpp  Speaker.h
cmake/: Findmatio.cmake
